fixed issue with overflow

--- a/styles.css
+++ b/styles.css
@@ -333,6 +333,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 
 @media screen and (max-width:450px) {
@@ -401,11 +402,13 @@ body {
     z-index: 0;
     width: 100%;
     height: 100%;
+    overflow: hidden;
+    top: 0;
 }
 
 #player {
     position: absolute;
-    transform: scale(1.5);
+    transform: scale(1.7);
 }
 
 .background-video-empty-overlay {
